crates/keron-lang/tests/corpus/errors/check/if_non_boolean_cond.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `Boolean`, found `Int`
  --> 1:17
  |
1 | val r: Int = if 1 { 2 } else { 3 }
  |                 ^
